--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart</title>
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="section-cart">
+      <header class="section-cart__header">
+        <div class="contaner">
+          <h1 class="title-1">Корзина товаров</h1>
+        </div>
+      </header>
+      <div class="section-cart__body">
+        <div class="container">
+          <section class="cart">
+            <header class="cart-header"></header>
+            <section class="product"></section>
+            <footer class="cart-footer"></footer>
+          </section>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
