added header footer

--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
   <body>
     <section class="section-cart">
       <header class="section-cart__header">
-        <div class="contaner">
+        <div class="container">
           <h1 class="title-1">Корзина товаров</h1>
         </div>
       </header>
       <div class="section-cart__body">
         <div class="container">
           <section class="cart">
-            <header class="cart-header"></header>
+            <header class="cart-header">
+              <div class="cart-header__title">Наименование</div>
+              <div class="cart-header__count">Количество</div>
+              <div class="cart-cost">Стоимость</div>
+            </header>
+
             <section class="product"></section>
-            <footer class="cart-footer"></footer>
+            <footer class="cart-footer">
+              <div class="cart-footer__count">3 единицы</div>
+              <div class="cart-footer__price">329 000 руб.</div>
+            </footer>
           </section>
         </div>
       </div>
