Created button delete

--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
               <div class="cart-cost">Стоимость</div>
             </header>
 
-            <section class="product"></section>
+            <section class="product">
+              <div class="product__img">
+                <img
+                  src="./img/products/macbook.jpg"
+                  alt="Apple MacBook Air 13"
+                />
+              </div>
+              <div class="producr__title">Apple MacBook Air 13</div>
+              <div class="producr__count">count</div>
+              <div class="producr__price">110 000 руб.</div>
+              <div class="producr__controls">del</div>
+            </section>
+
             <footer class="cart-footer">
               <div class="cart-footer__count">3 единицы</div>
               <div class="cart-footer__price">329 000 руб.</div>
