added first item

--- a/index.html
+++ b/index.html
@@ -31,9 +31,37 @@
                 />
               </div>
               <div class="producr__title">Apple MacBook Air 13</div>
-              <div class="producr__count">count</div>
+
+              <div class="producr__count">
+                <!-- count -->
+                <div class="count">
+                  <div class="count__box">
+                    <input
+                      type="number"
+                      class="count__input"
+                      min="1"
+                      max="100"
+                      value="1"
+                    />
+                  </div>
+
+                  <div class="count__controls">
+                    <button type="button" class="count__up">
+                      <img src="./img/icons/icon-up.svg" alt="Increase" />
+                    </button>
+                    <button type="button" class="count__down">
+                      <img src="./img/icons/icon-down.svg" alt="Decrease" />
+                    </button>
+                  </div>
+                </div>
+              </div>
+
               <div class="producr__price">110 000 руб.</div>
-              <div class="producr__controls">del</div>
+              <div class="producr__controls">
+                <button type="button">
+                  <img src="./img/icons/cross.svg" alt="delete" />
+                </button>
+              </div>
             </section>
 
             <footer class="cart-footer">
