--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
               <div class="cart-header__count">Количество</div>
               <div class="cart-cost">Стоимость</div>
             </header>
-
+            <!-- 1 -->
             <section class="product">
+              <!-- 1 -->
               <div class="product__img">
                 <img
                   src="./img/products/macbook.jpg"
@@ -57,6 +58,83 @@
               </div>
 
               <div class="producr__price">110 000 руб.</div>
+              <div class="producr__controls">
+                <button type="button">
+                  <img src="./img/icons/cross.svg" alt="delete" />
+                </button>
+              </div>
+            </section>
+            <!-- 2 -->
+            <section class="product">
+              <div class="product__img">
+                <img src="./img/products/apple-watch.jpg" alt="apple-watch" />
+              </div>
+              <div class="producr__title">Apple watch</div>
+
+              <div class="producr__count">
+                <!-- count -->
+                <div class="count">
+                  <div class="count__box">
+                    <input
+                      type="number"
+                      class="count__input"
+                      min="1"
+                      max="100"
+                      value="1"
+                    />
+                  </div>
+
+                  <div class="count__controls">
+                    <button type="button" class="count__up">
+                      <img src="./img/icons/icon-up.svg" alt="Increase" />
+                    </button>
+                    <button type="button" class="count__down">
+                      <img src="./img/icons/icon-down.svg" alt="Decrease" />
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="producr__price">29 000 руб.</div>
+              <div class="producr__controls">
+                <button type="button">
+                  <img src="./img/icons/cross.svg" alt="delete" />
+                </button>
+              </div>
+            </section>
+            <!-- 3 -->
+            <section class="product">
+              <!-- 1 -->
+              <div class="product__img">
+                <img src="./img/products/mac-pro.jpg" alt="Mac Pro" />
+              </div>
+              <div class="producr__title">Mac Pro</div>
+
+              <div class="producr__count">
+                <!-- count -->
+                <div class="count">
+                  <div class="count__box">
+                    <input
+                      type="number"
+                      class="count__input"
+                      min="1"
+                      max="100"
+                      value="1"
+                    />
+                  </div>
+
+                  <div class="count__controls">
+                    <button type="button" class="count__up">
+                      <img src="./img/icons/icon-up.svg" alt="Increase" />
+                    </button>
+                    <button type="button" class="count__down">
+                      <img src="./img/icons/icon-down.svg" alt="Decrease" />
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="producr__price">190 000 руб.</div>
               <div class="producr__controls">
                 <button type="button">
                   <img src="./img/icons/cross.svg" alt="delete" />
